Moved wallpapers to the $WALLPAPER env var

--- a/Custom/Desktop/hyprland.conf
+++ b/Custom/Desktop/hyprland.conf
@@ -95,6 +95,6 @@ bind=,XF86AudioLowerVolume,exec,pamixer -d 5
 bind=,XF86AudioMute,exec,pamixer -t
 bind=,XF86AudioPlay,exec,playerctl play-pause
 
-exec-once=swaybg -i $CONFIG_DIR/Wallpapers/Cars/RX7/savanna_japan.png
+exec-once=swaybg -i $WALLPAPER &
 exec-once=waybar &
 exec-once=himalaya notify &
