--- a/Custom/Desktop/hyprland.conf
+++ b/Custom/Desktop/hyprland.conf
@@ -9,8 +9,8 @@ input {
 }
 
 general {
-  gaps_in=5
-  gaps_out=10
+  gaps_in=2
+  gaps_out=4
   border_size=2
   col.active_border = 0xffb39df3
   col.inactive_border = 0xff27f8490
@@ -18,7 +18,7 @@ general {
 }
 
 decoration {
-  rounding=10
+  rounding=0
   active_opacity=0.9
   inactive_opacity=0.8
   blur=12
@@ -26,6 +26,10 @@ decoration {
   blur_passes=5
   blur_new_optimizations=1
   drop_shadow=false
+}
+
+animations {
+  enabled=false
 }
 
 dwindle {
