--- a/Custom/Desktop/hyprland.conf
+++ b/Custom/Desktop/hyprland.conf
@@ -91,7 +91,7 @@ bind=SUPERSHIFT,down,movewindow,d
 bind=SUPER,minus,splitratio,-0.25
 bind=SUPER,equal,splitratio,0.25
 
-bind=SUPER,T,exec,alacritty
+bind=SUPER,T,exec,urxvtc
 bind=SUPER,W,exec,firefox
 
 bind=,XF86AudioRaiseVolume,exec,pamixer -i 5
@@ -101,4 +101,5 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 
 exec-once=swaybg -i $WALLPAPER &
 exec-once=waybar &
+exec-once=urxvtd &
 exec-once=himalaya notify &
