Updated NixOS bootloader and fixed urxvt keybinds

--- a/Gentoo/make.conf
+++ b/Gentoo/make.conf
@@ -1,15 +1,15 @@
-COMMON_FLAGS="-O3 -march=native -pipe"
+COMMON_FLAGS="-O2 -march=native -pipe"
 CFLAGS="${COMMON_FLAGS}"
-CXXFLAGS="${CFLAGS}"
+CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j6 -l6"
 INPUT_DEVICES="libinput evdev"
 
-EMERGE_DEFAULT_OPS="--jobs 6 --load-average 6"
+EMERGE_DEFAULT_OPS="--jobs=6 --load-average=6"
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="minimal unicode X dbus libnotify pipewire pipewire-alsa upower wifi curl cxx man doc tools crypt ncurses calendar cups -screencast -libreoffice -telementry -systemd -agua -css -a52 -cjk -ldap -gnome -kde -gtk -qt5 -qt6 -plasma -ios -coreaudio -emacs -xemacs -motif -emboss -smartcard -ibm -nntp -quicktime -networkmanager -bluetooth nvenc nvidia vaapi"
+#USE="minimal unicode X dbus gnutls -nns libnotify pipewire pipewire-alsa wifi dhcpcd curl cxx man doc tools crypt ncurses calendar cups -screencast -libreoffice -telementry -systemd -agua -css -a52 -cjk -ldap -gnome -kde -gtk -qt5 -qt6 -plasma -ios -coreaudio -emacs -xemacs -motif -emboss -smartcard -ibm -nntp -quicktime networkmanager bluetooth nvenc nvidia vaapi"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 
