Updated Gentoo and Neovim Configs

--- a/Gentoo/make.conf
+++ b/Gentoo/make.conf
@@ -3,13 +3,14 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j6 -l6"
+MAKEOPTS="-j6"
 INPUT_DEVICES="libinput evdev"
 
-EMERGE_DEFAULT_OPS="--jobs=6 --load-average=6"
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-#USE="minimal unicode X dbus gnutls -nns libnotify pipewire pipewire-alsa wifi dhcpcd curl cxx man doc tools crypt ncurses calendar cups -screencast -libreoffice -telementry -systemd -agua -css -a52 -cjk -ldap -gnome -kde -gtk -qt5 -qt6 -plasma -ios -coreaudio -emacs -xemacs -motif -emboss -smartcard -ibm -nntp -quicktime networkmanager bluetooth nvenc nvidia vaapi"
+USE="minimal X -wayland man tools nvidia
+\ -telementry -gnome -gtk -kde -qt5 -qt6 -plasma -systemd -libreoffice -screencast -emacs -xemacs -smartcard -ibm -quicktime -agua -a52 -cjk -ldap -css -ios -coreaudio -emboss -motif" # Bloat
+VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 
