--- a/Custom/terminal/peaclock.conf
+++ b/Custom/terminal/peaclock.conf
@@ -26,7 +26,7 @@ set date on
 set seconds on
 set hour-24 on
 set auto-size off
-set auto-ratio on
+set auto-ratio off
 style active-fg clear
 style active-bg reverse
 style inactive-fg clear
