Working Desktop on Gentoo

--- a/Gentoo/make.conf
+++ b/Gentoo/make.conf
@@ -3,12 +3,12 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j6"
+MAKEOPTS="-j6 --load-average=6"
 INPUT_DEVICES="libinput evdev"
 
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="minimal X -wayland man tools nvidia
+USE="minimal X -wayland alsa pipewire dbus man tools nvidia wifi
 \ -telementry -gnome -gtk -kde -qt5 -qt6 -plasma -systemd -libreoffice -screencast -emacs -xemacs -smartcard -ibm -quicktime -agua -a52 -cjk -ldap -css -ios -coreaudio -emboss -motif" # Bloat
 VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
