--- a/Custom/terminal/starship.toml
+++ b/Custom/terminal/starship.toml
@@ -1,5 +1,5 @@
 add_newline = false
-format = "$username$hostname$directory$git_branch$git_metrics$line_break$character"
+format = "$username$hostname$directory$git_branch$git_state$git_status$git_metrics$line_break$character"
 
 [character]
 error_symbol = "[➜](bold red)"
@@ -12,6 +12,21 @@ style = "blue"
 [git_branch]
 format = "[$branch]($style)"
 style = "bright-black"
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bright-black"
+
+[git_status]
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+style = "cyan"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
+stashed = "≡"
 
 [git_metrics]
 added_style = "bold green"
