--- a/Gentoo/make.conf
+++ b/Gentoo/make.conf
@@ -1,4 +1,4 @@
-COMMON_FLAGS="-O2 -march=native -pipe"
+COMMON_FLAGS="-O3 -march=native -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
@@ -8,8 +8,8 @@ INPUT_DEVICES="libinput evdev"
 
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="minimal X -wayland alsa pipewire dbus man tools nvidia wifi
-\ -telementry -gnome -gtk -kde -qt5 -qt6 -plasma -systemd -libreoffice -screencast -emacs -xemacs -smartcard -ibm -quicktime -agua -a52 -cjk -ldap -css -ios -coreaudio -emboss -motif" # Bloat
+USE="minimal X -wayland alsa pipewire man tools nvidia unicode lto
+\ -telementry -gnome -gtk -gtk-doc -kde -qt5 -qt6 -plasma -systemd -libreoffice -screencast -emacs -xemacs -smartcard -ibm -quicktime -agua -a52 -cjk -ldap -css -ios -coreaudio -emboss -motif -elogind -pulseaudio -ipv6" # Bloat
 VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
