--- a/Custom/wm/xorg/polybar.conf
+++ b/Custom/wm/xorg/polybar.conf
@@ -143,7 +143,7 @@ label = cpu=%percentage%%
 type = internal/memory
 interval = 1
 format = <label>
-label = mem=%percentage_used%%
+label = mem=%used%/%total%
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
