Updated volume script

--- a/Custom/wm/other/polybar.conf
+++ b/Custom/wm/other/polybar.conf
@@ -148,13 +148,9 @@ format-background = ${colors.background}
 
 [module/volume]
 type = custom/script
-tail = true
 label = vol=%output%
-exec = ~/Config/Custom/scripts/volume.sh listen
-click-right = exec pavucontrol
-click-left = ~/Config/Custom/scripts/volume.sh mute
-scroll-up = ~/Config/Custom/scripts/volume.sh increase
-scroll-down = ~/Config/Custom/scripts/volume.sh decrease
+interval = 1
+exec = ~/Config/Custom/scripts/volume.sh get human
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
