--- a/Gentoo/portage/make.conf
+++ b/Gentoo/portage/make.conf
@@ -8,8 +8,11 @@ INPUT_DEVICES="libinput evdev"
 
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="minimal X -wayland alsa pipewire man tools nvidia unicode lto dbus elogind
-\ -telementry -gnome -gtk -gtk-doc -kde -qt5 -qt6 -plasma -systemd -libreoffice -screencast -emacs -xemacs -smartcard -ibm -quicktime -agua -a52 -cjk -ldap -css -ios -coreaudio -emboss -motif -pulseaudio -ipv6" # Bloat
+USE="minimal elogind -X -wayland alsa nvidia 
+\ lto dmenu
+\ -telementry -gnome -gtk -gtk-doc -kde -qt5 -qt6 -plasma -pulseaudio -pipewire
+\ -systemd -libreoffice -screencast -emacs -xemacs -ipv6 
+\ -3df -3dfx -altivec -aqua -a52 -berkdb -css -clamav -coreaudio -cjk -cups -emboss -ibm -ios -ipod -ieee1394 -ldap -motif -smartcard -neon -nntp -nls -nas -quicktime" # Bloat
 VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
