--- a/Gentoo/portage/make.conf
+++ b/Gentoo/portage/make.conf
@@ -8,11 +8,13 @@ INPUT_DEVICES="libinput evdev"
 
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="minimal elogind -X -wayland alsa nvidia 
-\ lto dmenu
-\ -telementry -gnome -gtk -gtk-doc -kde -qt5 -qt6 -plasma -pulseaudio -pipewire
-\ -systemd -libreoffice -screencast -emacs -xemacs -ipv6 
-\ -3df -3dfx -altivec -aqua -a52 -berkdb -css -clamav -coreaudio -cjk -cups -emboss -ibm -ios -ipod -ieee1394 -ldap -motif -smartcard -neon -nntp -nls -nas -quicktime" # Bloat
+USE="alsa dmenu elogind lto minimal nvidia -3d -3df -3dfx -3dnow
+     -3ware -6-pieces -X -a52 -aacraid -aacs -absolute-position -accessibility
+     -accountpolicy -altivec -aqua -bash -berkdb -bluetooth -cjk -clamav
+     -coreaudio -css -cups -emacs -emboss -gnome -gtk -gtk-doc -ibm -ieee1394
+     -ios -ipod -ipv6 -kde -ldap -libreoffice -motif -nas -neon -nls -nntp
+     -pipewire -plasma -pulseaudio -qt5 -qt6 -quicktime -screencast -smartcard
+     -systemd -telementry -wayland -xemacs" # Bloat
 VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
