--- a/Gentoo/portage/make.conf
+++ b/Gentoo/portage/make.conf
@@ -1,4 +1,4 @@
-COMMON_FLAGS="-O3 -march=native -pipe"
+COMMON_FLAGS="-O2 -march=native -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
@@ -15,12 +15,8 @@ USE="alsa dmenu elogind dbus lto minimal nvidia -3d -3df -3dfx -3dnow
      -ios -ipod -ipv6 -kde -ldap -libreoffice -motif -nas -neon -nls -nntp
      -pipewire -plasma -pulseaudio -qt5 -qt6 -quicktime -screencast -smartcard
      -systemd -telementry -wayland -xemacs" # Bloat
-VIDEO_CARDS="nvidia"
+#VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 
 LC_MESSAGES=C
-
-GENTOO_MIRRORS="http://gentoo.osuosl.org/ http://mirrors.rit.edu/gentoo/ https://mirrors.rit.edu/gentoo/"
-
-GRUB_PLATFORMS="efi-64"
