Update install scripts

--- a/gentoo/portage/make.conf
+++ b/gentoo/portage/make.conf
@@ -8,7 +8,7 @@ INPUT_DEVICES="libinput evdev"
 
 PORTAGE_NICENESS=1
 FEATURES="parallel-install"
-USE="alsa dmenu elogind dbus lto minimal nvidia -3d -3df -3dfx -3dnow
+USE="alsa elogind lto minimal nvidia -3d -3df -3dfx -3dnow
      -3ware -6-pieces -X -a52 -aacraid -aacs -absolute-position -accessibility
      -accountpolicy -altivec -aqua -bash -berkdb -bluetooth -cjk -clamav
      -coreaudio -css -cups -emacs -emboss -gnome -gtk -gtk-doc -ibm -ieee1394
