Updated portage configuration files

--- a/gentoo/portage/make.conf
+++ b/gentoo/portage/make.conf
@@ -15,8 +15,9 @@ USE="alsa elogind lto minimal nvidia -3d -3df -3dfx -3dnow
      -ios -ipod -ipv6 -kde -ldap -libreoffice -motif -nas -neon -nls -nntp
      -pipewire -plasma -pulseaudio -qt5 -qt6 -quicktime -screencast -smartcard
      -systemd -telementry -wayland -xemacs" # Bloat
-#VIDEO_CARDS="nvidia"
+VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 
 LC_MESSAGES=C
+GRUB_PLATFORMS="efi-64"
